--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Eric</title>
   </head>
 
-  <p>This is just a redirect page. If you were looking for my capstone website, it's here:</p>
-  <button type="button" onclick="window.location = 'https://eric75316.wixsite.com/ericflim'">Proceed To Eric Flim's Website</button>
+  <p>None</p>
 
   </body>
 </html>
