--- a/TheScene.html
+++ b/TheScene.html
@@ -103,7 +103,7 @@ ul
 <p class=MsoNormal>Okay everyone, here’s the scene. It’s supposed to be
 horrible weather, so prepare to make memories. Featured for entertainment this
 year we have Regan Trolly attempting the ridiculous feat of bringing a
-motorboat into the backcountry (a glorious mockery of his Metis status).
+motorboat into the backcountry.
 Expected highlights include:</p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-.25in'><span
@@ -179,7 +179,7 @@ in garbage bags. Being wet while camping can be horrible, but being dry is
 cozy/relaxing. </p>
 
 <p class=MsoNormal align=center style='text-align:center'><img width=665
-height=675 id="Picture 1" src="map.png"></p>
+height=675 id="Picture 1" src="map.PNG"></p>
 
 <p class=MsoNormal><b><span style='font-family:"Cambria","serif"'>WHAT WE’LL
 BRING</span></b></p>
