--- a/TheScene.html
+++ b/TheScene.html
@@ -1208,7 +1208,7 @@ style='font-family:"Cambria","serif"'>THE SCENE<o:p></o:p></span></b></p>
 here’s the scene. It’s supposed to be horrible weather, so prepare to make
 memories. Featured for entertainment this year we have Regan <span
 class=SpellE>Trolly</span> attempting the ridiculous feat of bringing a motorboat
-into the backcountry (a glorious mockery of his Metis status). Expected
+into the backcountry. Expected
 highlights include:</p>
 
 <p class=MsoListParagraph style='margin-top:12.0pt;margin-right:0in;margin-bottom:
